--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    
     <title>test</title>
 
     <style>
@@ -19,6 +20,8 @@
             text-align: center;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script type='text/javascript' src='./astar-pathfinding-canvas.js'></script>
 </head>
 <body onload='onload()'>
