--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -30,6 +30,10 @@
 </div>
 <div>
     <div style="margin-bottom: 10px">
+        가로: <input type="number" min="0" id="txtX" value="" style="width: 50px; margin-right: 10px;">
+        세로: <input type="number" min="0" id="txtY" value="" style="width: 50px;">
+    </div>
+    <div style="margin-bottom: 10px">
         <label> <input type="checkbox" id="chkWall"/> 장애물 생성</label>
     </div>
     <div>
