--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -24,9 +24,9 @@
     <script type='text/javascript' src='./astar-pathfinding-canvas.js'></script>
     <script type='text/javascript' src='./test.js'></script>
 </head>
-<body onload='onload()'>
+<body onload='onload()' style="    background-color: #ebfff3;">
 <div>
-    <h2>1조 과제</h2>
+    <h2>A star</h2>
 </div>
 <div>
     <div style="margin-bottom: 10px">
