--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -35,11 +35,12 @@
     </div>
     <div style="margin-bottom: 10px">
         <label> <input type="checkbox" id="chkWall"/> 장애물 생성</label>
+        <label> <input type="checkbox" id="chkHistory"/> 히스토리 보기</label>
     </div>
     <div>
         <select id="selOption">
             <option value="4">4방향</option>
-            <option value="8">8방향</option>
+            <option value="8" selected>8방향</option>
         </select>
     </div>
 </div>
