--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-
     <style>
         body {
             padding: 0;
@@ -19,24 +18,53 @@
             text-align: center;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script type='text/javascript' src='./astar-pathfinding-canvas.js'></script>
+    <script type='text/javascript' src='./test.js'></script>
 </head>
-<body onload='onload()'>
+<body onload='onload()' style="background-color: #ebfff3;">
 <div>
-    <h2>1조 과제</h2>
+    <h2>A star</h2>
 </div>
-
 <div>
-    <h1>Current Time: <span th:text="${currentTime}"></span></h1>
+    <div style="margin-bottom: 10px">
+        <span style="margin-right: 10px;"></span>
+        가로: <input type="number" min="0" id="txtX" value="" style="width: 50px; margin-right: 10px;">
+        세로: <input type="number" min="0" id="txtY" value="" style="width: 50px;">
+
+        <span style="margin-right: 10px;"></span>
+        방향:
+        <select id="selOption">
+            <option value="4" selected>4방향</option>
+            <option value="8">8방향</option>
+        </select>
+    </div>
+    <div style="margin-bottom: 10px">
+        <p>출발지점 선택 후 종료 지점 선택</p>
+    </div>
+    <div style="margin-bottom: 10px">
+        선택:
+        <select id="selClick">
+            <option value="a">짱구</option>
+            <option value="b">흰둥이</option>
+        </select>
+    </div>
+    <div style="margin-bottom: 10px">
+        <label> <input type="checkbox" id="chkWall"/> 장애물 생성</label>
+        <label> <input type="checkbox" id="chkHistory"/> 히스토리 보기</label>
+    </div>
+
 </div>
-
-<div>
-    <input type='button' onClick='createWorld()' value='장애물 랜덤'>
+<div style="margin : 20px;">
+    <input type='button' id="btnRandomWall" value='장애물 랜덤'>
+    <input type='button' id="btnResetWall" value='장애물 초기화'>
+    <input type='button' id="btnRest" value='경로 초기화'>
+    <input type='button' id="btnMover" value='짱구 이동'>
 </div>
 <div>
     <canvas id="gameCanvas"></canvas>
 </div>
-
 </body>
 
 </html>
