--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,8 +20,8 @@
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <script type='text/javascript' src='./astar-pathfinding-canvas.js'></script>
-    <script type='text/javascript' src='./test.js'></script>
+    <script type='text/javascript' src='/astar-pathfinding-canvas.js'></script>
+    <script type='text/javascript' src='/test.js'></script>
 </head>
 <body onload='onload()' style="background-color: #ebfff3;">
 <div>
