Feat :  add second program file

--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -62,6 +62,10 @@
     <input type='button' id="btnMover" value='짱구 이동'>
     <input type='button' id="btnHistory" value='히스토리 보기'>
 </div>
+<div style="margin : 20px;">
+    <p>스쿨버스 운행 프로그램</p>
+    <button onclick="window.location.href = './astar-demo2.html';">다음 페이지</button>
+</div>
 <div>
     <canvas id="gameCanvas"></canvas>
 </div>
