--- a/astarHtml/astar-demo2.html
+++ b/astarHtml/astar-demo2.html
@@ -22,7 +22,7 @@
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type='text/javascript' src='./astar-pathfinding-canvas2.js'></script>
-    <script type='text/javascript' src='./test.js'></script>
+    <script type='text/javascript' src='./aster_event.js'></script>
 </head>
 <body onload='onload()' style="    background-color: #ebfff3;">
 <div>
