--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -27,6 +27,7 @@
 <div>
     <h2>A star</h2>
 </div>
+<img  id="imgFind"src="find_show.jpg" style="position: absolute;top: 50%; display: none; left: 50%; transform: translate(-50%, -50%);"/>
 <div>
     <div style="margin-bottom: 10px">
         <span style="margin-right: 10px;"></span>
@@ -44,7 +45,7 @@
         <p>출발 지점 선택 후 종료 지점 선택</p>
     </div>
     <div style="margin-bottom: 10px">
-        <p>시간 계산 ( mille time ): <span id="spnTime"></span></p>
+        <p>시간 계산 ( nano time ): <span id="spnTime"></span></p>
     </div>
     <div style="margin-bottom: 10px">
         선택:
