feat : add bus exception

--- a/astarHtml/astar-demo2.html
+++ b/astarHtml/astar-demo2.html
@@ -65,7 +65,9 @@
 <div>
     <canvas id="gameCanvas"></canvas>
 </div>
-
+<div style="margin : 20px;">
+    <button id="btnbusfind">버스 운행</button>
+</div>
 </body>
 
 </html>
