--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,6 +39,12 @@
             <option value="4" selected>4방향</option>
             <option value="8">8방향</option>
         </select>
+        <span style="margin-right: 10px;"></span>
+        Heuristic:
+        <select id="selDistance">
+            <option value="m" selected>Manhattan Distance</option>
+            <option value="e">Euclidean Distance</option>
+        </select>
     </div>
     <div style="margin-bottom: 10px">
         <p>출발 지점 선택 후 종료 지점 선택</p>
