--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -40,6 +40,12 @@
             <option value="4" selected>4방향</option>
             <option value="8">8방향</option>
         </select>
+        <span style="margin-right: 10px;"></span>
+        Heuristic:
+        <select id="selDistance">
+            <option value="0" selected>Manhattan Distance</option>
+            <option value="1">Euclidean Distance</option>
+        </select>
     </div>
 
     <div style="margin-bottom: 10px">
