--- a/astarHtml/astar-demo2.html
+++ b/astarHtml/astar-demo2.html
@@ -42,21 +42,10 @@
         가로: <input type="number" min="0" id="txtX" value="" style="width: 50px; margin-right: 10px;">
         세로: <input type="number" min="0" id="txtY" value="" style="width: 50px;">
     </div>
-    <div style="margin-bottom: 10px">
-        <label> <input type="checkbox" id="chkWall"/> 장애물 생성</label>
-        <label> <input type="checkbox" id="chkHistory"/> 히스토리 보기</label>
-    </div>
-    <div>
-        <select id="selOption">
-            <option value="4">4방향</option>
-            <option value="8" selected>8방향</option>
-        </select>
-    </div>
 </div>
 <div style="margin : 20px;">
     <input type='button' id="btnRandomWall" value='장애물 랜덤'>
-    <input type='button' id="btnResetWall" value='장애물 초기화'>
-    <input type='button' id="btnRest" value='경로 초기화'>
+    <input type='button' id="btnResetWall" value='초기화'>
 </div>
 <div style="margin : 20px;">
     <p>흰둥이 찾기 프로그램</p>
