--- a/astarHtml/astar-demo.html
+++ b/astarHtml/astar-demo.html
@@ -27,7 +27,7 @@
 <div>
     <h2>A star</h2>
 </div>
-<img  id="imgFind"src="find_show.jpg" style="position: absolute;top: 50%; display: none; left: 50%; transform: translate(-50%, -50%);"/>
+<img  id="imgFind"src="find_show.jpg" style="position: fixed;top: 50%; display: none; left: 50%; transform: translate(-50%, -50%);"/>
 <div>
     <div style="margin-bottom: 10px">
         <span style="margin-right: 10px;"></span>
